@@ -136,7 +136,7 @@ conditions:
 
 .IP "\fBSIGINT\fR, \fBSIGTERM\fR, \fBSIGHUP\fR"
 
-Remove an incompletely written database and exit (code 25).
+Remove an incompletely written database (only if database file was created by aide) and exit (code 25).
 
 .IP \fBSIGUSR1\fR
 
